--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "phaza/laravel-postgis": "^3.5"
+        "phaza/laravel-postgis": "^3.5",
+        "shiftonelabs/laravel-cascade-deletes": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
